Configuracion de la base

--- a/templates/lista_productos.html
+++ b/templates/lista_productos.html
@@ -5,9 +5,9 @@
 		<ul> 
 			
 			<li> {{producto.nombre}} </li>
-			<li> {{producto.marca}} </li>
+			<li> {{producto.stock}} </li>
 			<li> 
-				<img src="{{MEDIA_ROOT}}{{producto.img}} ">
+				<img src="{{MEDIA_URL}}{{producto.img}} ">
 				</li>
 			<li> {{producto.precio}} </li>
 
