--- a/templates/lista_productos.html
+++ b/templates/lista_productos.html
@@ -7,7 +7,7 @@
 			<li> {{producto.nombre}} </li>
 			<li> {{producto.marca}} </li>
 			<li> 
-				<img src="{{MEDIA_ROOT}}{{producto.img}} ">
+				<img src="{{MEDIA_URL}}{{producto.img}} ">
 				</li>
 			<li> {{producto.precio}} </li>
 
