--- a/templates/Default.html
+++ b/templates/Default.html
@@ -10,12 +10,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/fonts.css">
-        
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
@@ -28,14 +27,14 @@
                 <div class="row">
                     <div class="col-xs-8">
                         <div class="app_logo">
-                            <p class="app_title">La Empresa</p>
+                            <h1>La Empresa</h1>
                         </div>
                     </div>
                     <div class="col-xs-2">
                         <div class="app_font1">
-                            <a href="#" class="app_link"><span class="icon-twitter"></span></a>
-                            <a href="#" class="app_link"><span class="icon-facebook"></span></a>
-                            <a href="#" class="app_link"><span class="icon-google-plus"></span></a>
+                            <span class="icon-twitter"></span>
+                            <span class="icon-facebook"></span>
+                            <span class="icon-google-plus"></span>
                         </div>
                     </div>
                     <div class="col-xs-2">
@@ -48,42 +47,8 @@
             </div>
         </header>
 
-        <!--Barra de Navegacion - Mayra Reloca XD-->
         <nav class="app_nav">
-            <div class="container">
-                <ul class="app_ul app_margen">
-                    <li class="turquesa click">
-                      <div class="activateE">
-                        <div class="linea_nav l_activa_empresa"></div>
-                        <a href="index.html">La Empresa</a>
-                      </div>
-                    </li>
-                    <li class="turquesa click">
-                       <div class="activateU">
-                        <div class="linea_nav l_activa_escolar"></div>
-                        <a href="escolares.html">Utiles Escolares</a>
-                       </div>
-                    </li>
-                    <li class="turquesa click">
-                       <div class="activateO">
-                        <div class="linea_nav l_activa_oficina"></div>
-                        <a href="oficina.html">Utiles de Oficina</a>
-                       </div>
-                    </li>
-                    <li class="turquesa click">
-                       <div class="activateR">
-                        <div class="linea_nav l_activa_regalo"></div>
-                         <a href="regalos.html">Regalos</a>
-                       </div>
-                    </li>
-                    <li class="turquesa click">
-                       <div class="activateC">
-                        <div class="linea_nav l_activa_contacto"></div>
-                        <a href="contactanos.html">Contáctenos</a>
-                       </div>
-                    </li>
-                </ul>
-            </div>
+            <div class="container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, vel, a, eos culpa veritatis maiores fuga aliquam quis sequi repudiandae sunt magni pariatur recusandae praesentium et nisi repellat. Dolorem, quaerat.</div>
         </nav>
 
         <section class="app_slider">
@@ -110,7 +75,7 @@
             </div>
         </section>
 
-        <section class="app_lista1">
+        <section class="app_lista">
             <div class="container">
                 <div class="row app_margen">
                     <div class="col-xs-7">
@@ -226,7 +191,7 @@
             </div>
         </section>
 
-        <section class="app_lista2">
+        <section class="app_lista">
             <div class="container">
                 <div class="row app_margen">
                     <div class="col-xs-7">
@@ -236,7 +201,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto2.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -247,7 +212,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto2.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -258,7 +223,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto2.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -273,7 +238,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto2.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -284,7 +249,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto2.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -301,7 +266,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto3.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -312,7 +277,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto3.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -323,7 +288,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto3.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -338,7 +303,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto3.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -349,7 +314,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto3.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -366,7 +331,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto4.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -377,7 +342,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto4.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -388,7 +353,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto4.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -403,7 +368,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto4.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -414,7 +379,7 @@
                                     <div class="app_alinear">
                                         <h5>Nombre</h5>
                                     </div>
-                                    <img src="img/Producto4.png" class="img-responsive">
+                                    <img src="img/Producto1.png" class="img-responsive">
                                     <div class="app_alinear app_centrar">
                                         <h5>S/.20.00 </h5>
                                     </div>
@@ -428,7 +393,7 @@
 
         <footer class="app_footer">
             <div class="container">
-                <p>Derechos reservados @2014 Qaysen</p>
+                <h4>Derechos reservados @2014 Qaysen</h4>
             </div>
         </footer>
 
