--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/fonts.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/normalize.min.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/main.css">
+        <link rel="stylesheet" href="{{STATIC_URL}}css/fonts.css">
         
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="{{STATIC_URL}}js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -90,7 +90,7 @@
             <div class="container">
                 <div class="row app_margen">
                     <div class="col-xs-8">
-                        <img src="img/slider.png" class="img-responsive">
+                        <img src="{{STATIC_URL}}img/slider.png" class="img-responsive">
                     </div>
                     <div class="col-xs-4">
                         <div class="centrar">
@@ -432,8 +432,8 @@
             </div>
         </footer>
 
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{STATIC_URL}}js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
-        <script src="js/main.js"></script>
+        <script src="{{STATIC_URL}}js/main.js"></script>
     </body>
 </html>
