--- a/templates/Productos.html
+++ b/templates/Productos.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block estilos %}
+    <link rel="stylesheet" href="{{STATIC_URL}}css/utiles.css">
+{% endblock %}
+
 {% block title %}Utiles Escolares{% endblock %}
 
         {% block content %}
