--- a/static/css/utiles.css
+++ b/static/css/utiles.css
@@ -1,13 +1,4 @@
-.navegacion{
-	width: 25%;
-	position: absolute;
-}
-
-.prod{
-	width: 73%;
-	position: relative;
-	left: 350px;
-}
+/* --------- Clases con propiedades comunes -------- */
 
 .navegacion, .prod{
 	display: inline-block;
@@ -16,6 +7,14 @@
 
 }
 
+/* ------------------------------------------------- */
+
+/* ----------------- Bloque de Navegación Vertical ------------------ */
+
+.navegacion{
+	width: 25%;
+	position: absolute;
+}
 
 .navi{
 	height: 100%;
@@ -32,7 +31,7 @@ ul{
 }
 
 .list_padre{
-	border: 1px solid rgba(91, 113, 231, 0.33);
+	border: 1px solid rgba(22, 197, 99, 0.65);
 	border-radius: 3px;
 }
 
@@ -47,19 +46,58 @@ ul{
 	cursor: pointer;
 }
 
-p{
+.mi{
 	padding-top: 10px;
 	padding-bottom: 20px;
 	padding-left: 20px;
 	margin: 0px;
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.46);
-	background: #00b7ea; /* Old browsers */
-background: -moz-linear-gradient(top, #00b7ea 39%, #009ec3 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(39%,#00b7ea), color-stop(100%,#009ec3)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #00b7ea 39%,#009ec3 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #00b7ea 39%,#009ec3 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #00b7ea 39%,#009ec3 100%); /* IE10+ */
-background: linear-gradient(to bottom, #00b7ea 39%,#009ec3 100%); /* W3C */
+	background-color: #2ecc71;
+	border-bottom: 3px solid rgba(22, 197, 99, 0.65);
+}
+
+.mi:hover{
+	background-color: rgb(140, 223, 156);
+}
+
+.list_hija{
+	background-color: white;
+	display: none;
+	overflow-x:hidden;
+	height:320px;
+}
+
+.list_hija li{
+	list-style: none;
+	list-style-type: none;
+	color: rgba(0, 0, 0, 0.45);
+	font-size: 15px;
+	padding: 12px;
+	border-bottom: 1px solid rgba(22, 197, 99, 0.65);
+}
+
+.list_hija li:hover{
+	background-color: rgb(238, 241, 243);
+	border-left: 8px solid rgba(4, 24, 14, 0.33);
+}
+
+.sh{
+	display: none;
+	float: left;
+	font-size: 18px;
+	margin-top: 2px;
+	margin-right: 5px;
+}
+
+/* ------------------------------------------------------------------ */
+
+
+/* ----------------- Bloque de Muestreo de Productos ---------------- */
+
+.prod{
+	width: 73%;
+	position: relative;
+	left: 350px;
 }
 
 .caja{
@@ -69,36 +107,18 @@ background: linear-gradient(to bottom, #00b7ea 39%,#009ec3 100%); /* W3C */
 	margin: 10px;
 	display: inline-block;
 	border-radius: 3px;
+	margin-top: 0px;
 }
 
 .caja img:hover{
-	transform: scale(0.98,0.98);
-	-webkit-transform: scale(0.98,0.98);
 	cursor: pointer;
 }
 
 .caja_padre{
-	margin-top: 20px;
-}
-
-
-.list_hija{
-	background-color: white;
-	display: none;
-}
-
-.list_hija li{
-	list-style: none;
-	list-style-type: none;
-	color: rgba(0, 0, 0, 0.45);
-	font-size: 13px;
-	padding: 12px;
-	border-bottom: 1px solid rgba(34, 31, 31, 0.15);
-}
-
-.list_hija li:hover{
-	background-color: rgb(238, 241, 243);
-	border-left: 5px solid rgba(91, 113, 231, 0.33);
+	margin-top: 30px;
+	padding-top: 20px;
+	height: 700px;
+	background-color: rgba(46, 204, 113, 0.46);
 }
 
 .cantidad{
@@ -113,3 +133,13 @@ background: linear-gradient(to bottom, #00b7ea 39%,#009ec3 100%); /* W3C */
 	margin: 10px;
 	display: inline-block;
 }
+
+/* ------------------------------------------------------------------ */
+
+.col-xs-9{
+	overflow-x:hidden;height:680px;
+}
+
+
+
+
