--- a/templates/base.html
+++ b/templates/base.html
@@ -52,33 +52,33 @@
         <nav class="app_nav">
             <div class="container">
                 <ul class="app_ul app_margen">
-                    <li class="turquesa click">
-                      <div class="activateE">
-                        <div class="linea_nav l_activa_empresa"></div>
+                    <li id="verde">
+                      <div>
+                        <div class="linea_nav"></div>
                         <a href="index.html">La Empresa</a>
                       </div>
                     </li>
-                    <li class="turquesa click">
-                       <div class="activateU">
-                        <div class="linea_nav l_activa_escolar"></div>
+                    <li id="granate">
+                       <div>
+                        <div class="linea_nav"></div>
                         <a href="utiles_escolares/">Utiles Escolares</a>
                        </div>
                     </li>
-                    <li class="turquesa click">
-                       <div class="activateO">
-                        <div class="linea_nav l_activa_oficina"></div>
+                    <li id="amarillo">
+                       <div>
+                        <div class="linea_nav"></div>
                         <a href="oficina.html">Utiles de Oficina</a>
                        </div>
                     </li>
-                    <li class="turquesa click">
-                       <div class="activateR">
-                        <div class="linea_nav l_activa_regalo"></div>
+                    <li id="morado">
+                       <div>
+                        <div class="linea_nav"></div>
                          <a href="regalos.html">Regalos</a>
                        </div>
                     </li>
-                    <li class="turquesa click">
-                       <div class="activateC">
-                        <div class="linea_nav l_activa_contacto"></div>
+                    <li id="agua">
+                       <div>
+                        <div class="linea_nav"></div>
                         <a href="contactanos.html">Contáctenos</a>
                        </div>
                     </li>
